# chatbot-confidential

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  build.sh  compose-dev.yaml  compose.yaml  compose.yml  main.py  main_test.py  pyproject.toml  requirements.txt  run_cache_model.py  run_entrypoint.sh  run_server.py  server.py
.github/workflows/: flake8.yml
alembic/: env.py
alembic/versions/: 2023_10_26_0904-07d559970e72_initial_baseline.py  2023_10_26_0945-ae395446a7ae_make_fileupload_model.py  2023_10_26_1022-0fa079ce5b36_initial_baseline_migration.py  2023_10_26_1024-ed10ab340d5f_adding_initial_fileupload_model.py  2023_10_26_1305-e2d33755acdc_defining_embedded_chunk_table.py  2023_11_02_0804-3c2e52612613_permit_null_vectors_in_embeddings.py
backend_sanic/: api_generate.py  app.py  chat_util.py  db.py  embeddings.py  file.py  models.py  server.py  text.py
backend_sanic/api/: __init__.py  chat.py  file_uploads.py  hello_world.py  initial_chat.py  upload.py
docker/ollama-canned/: Dockerfile  run_ollama_pull.sh
frontend_quasar_vue/: .env.development  .gitignore  README.md  package-lock.json  package.json  quasar.config.js
frontend_quasar_vue/src/boot/: axios.ts
frontend_quasar_vue/src/components/: ChatBox.vue  DotsLoader.vue  UploadedDataTable.vue
frontend_quasar_vue/src/layouts/: MainLayout.vue
frontend_quasar_vue/src/pages/: DataPage.vue  IndexPage.vue  SettingsPage.vue
frontend_quasar_vue/src/router/: routes.ts
frontend_quasar_vue/src/stores/: store-conversation-turns.ts
frontend_vue/: .env.development  README.md  package-lock.json  package.json
frontend_vue/src/: main.ts
frontend_vue/src/router/: index.ts
models/: .gitattributes
models/thenlper--gte-large/: .gitattributes  README.md  config.json  model.safetensors
models/thenlper--gte-large/models/: modules.json
models/thenlper--gte-large/models/onnx/: model.onnx
models/thenlper--gte-large/onnx/: .gitattributes  config.json
