[tool.poetry]
name = "chatbot-confidential"
version = "0.0.1"
description = "fully-contained (no external API calls) knowledgebase chatbot"
authors = ["Brad Ito <phlogisticfugu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = {version = "^23.6.0", extras = ["ext"]}

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
mypy = "^1.6.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
