[tool.poetry]
name = "chatbot-confidential"
version = "0.2.0"
description = "fully-contained (no external API calls) knowledgebase chatbot"
authors = ["Brad Ito <phlogisticfugu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
nanoid = "^2.0.0"
pgvector = "^0.2.3"
sanic = {version = "^23.6.0", extras = ["ext"]}
sqlalchemy = {version = "^2.0.22", extras = ["asyncio"]}
pypdf = "^3.17.0"
python-docx = "^1.0.1"
torch = "^2.1.0"
transformers = "^4.35.0"
onnxruntime = "^1.16.1"
psutil = "^5.9.6"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
mypy = "^1.6.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
